--- a/src/components/conclusion.astro
+++ b/src/components/conclusion.astro
@@ -6,7 +6,10 @@ import Spacer from '../components/spacer.astro'
 const { data } = Astro.props
 ---
 
-<section class={`conclusion-container${data.background ? ` background-${data.background}` : ''}`}>
+<section
+	class={`conclusion-container${data.background.main ? ` background-${data.background.main}` : ''}`}
+	style={`${data.background.main && data.background.trans && `background-image: linear-gradient(180deg, var(--${data.background.trans}) 10rem, var(--${data.background.main}) 10rem);`}`}
+>
 	<div class="page-extra">
 		<TempImage aspect="landscape" />
 	</div>
@@ -21,20 +24,24 @@ const { data } = Astro.props
 <style>
 	.conclusion-container {
 		overflow: hidden;
-	}
-	.conclusion-container.background-blue-600 {
-		background-color: unset;
-		background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 40rem, var(--blue-600) 40rem);
 
 		.text-script {
-			color: var(--blue-400);
 			margin: 0 4rem;
 			white-space: nowrap;
 		}
 	}
-	@media (max-width: 980px) {
-		.conclusion-container.background-blue-600 {
-			background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 10rem, var(--blue-600) 10rem);
+	.conclusion-container.background-blue-600 {
+		background-color: unset;
+
+		.text-script {
+			color: var(--blue-400);
+		}
+	}
+	.conclusion-container.background-peach-800 {
+		background-color: unset;
+
+		.text-script {
+			color: var(--peach-600);
 		}
 	}
 </style>
