--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 
 	--white: #ffffff;
 	--black: #222222;
+	--clear: rgba(0, 0, 0, 0);
 
 	--cream-400: #f9f7f2;
 	--cream-200: #fdfcfa;
@@ -202,6 +203,10 @@ button:hover {
 	background-color: var(--peach-800);
 }
 
+.background-peach-100 {
+	background-color: var(--peach-100);
+}
+
 .background-blue-600 {
 	background-color: var(--blue-600);
 }
@@ -236,6 +241,10 @@ button:hover {
 	padding: 0 min(100px, 5%);
 	border-left: solid 2px var(--black);
 	border-right: solid 2px var(--black);
+}
+
+.background-peach-800 .page-width-lines {
+	border-color: var(--peach-600);
 }
 
 .background-blue-600 .page-width-lines {
