Build final pages and last components for first client preview

--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -17,6 +17,7 @@ const { data } = Astro.props
 	}
 
 	:global(.background-peach-800) .cta-btn {
+		color: var(--cream-400);
 		background-color: var(--peach-600);
 	}
 
@@ -25,6 +26,7 @@ const { data } = Astro.props
 	}
 
 	:global(.background-blue-600) .cta-btn {
+		color: var(--cream-400);
 		background-color: var(--blue-400);
 	}
 
