--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -8,15 +8,17 @@ import Spacer from '../components/spacer.astro'
 		<div class="footer-links-container">
 			<ul>
 				<li class="text-subtitle"><span>Links:</span></li>
-				<li class="text-subtitle"><a href="#">Home</a></li>
-				<li class="text-subtitle"><a href="#">About</a></li>
-				<li class="text-subtitle"><a href="#">Weddings</a></li>
-				<li class="text-subtitle"><a href="#">Packages</a></li>
+				<li class="text-subtitle"><a href="/">Home</a></li>
+				<li class="text-subtitle"><a href="/about/">About</a></li>
+				<li class="text-subtitle"><a href="/weddings/">Weddings</a></li>
+				<li class="text-subtitle"><a href="/packages/">Packages</a></li>
 			</ul>
 			<ul>
 				<li class="text-subtitle"><span>Contact:</span></li>
-				<li class="text-subtitle"><a href="#">Email</a></li>
-				<li class="text-subtitle"><a href="#">Instagram</a></li>
+				<li class="text-subtitle"><a href="/contact">Email</a></li>
+				<li class="text-subtitle">
+					<a href="https://www.instagram.com/clairejulietpaton" target="_blank">Instagram</a>
+				</li>
 			</ul>
 		</div>
 		<Spacer />
@@ -24,8 +26,11 @@ import Spacer from '../components/spacer.astro'
 	<div class="page-extra">
 		<div class="footer-bottom-bar">
 			<ul>
-				<li class="text-subtitle"><a href="#">Website: We Can Rebuild Him</a></li>
-				<li class="text-subtitle"><a href="#">Privacy Policy</a></li>
+				<li class="text-subtitle">
+					<a href="https://www.studiorebuildhim.com/" target="_blank"
+						>Website: We Can Rebuild Him</a>
+				</li>
+				<li class="text-subtitle"><a href="/privacy/">Privacy Policy</a></li>
 			</ul>
 		</div>
 	</div>
