--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -19,11 +19,11 @@ import Logo from '../components/logo.astro'
 						<span class="submenu-title">Info</span>
 						<ul class="submenu-list">
 							<li class="text-subtitle menu-item"><a href="/east-lothian/">East Lothian</a></li>
-							<li class="text-subtitle menu-item"><a href="#">Wedding Blog</a></li>
-							<li class="text-subtitle menu-item"><a href="#">Packages</a></li>
+							<li class="text-subtitle menu-item"><a href="/blog/">Wedding Blog</a></li>
+							<li class="text-subtitle menu-item"><a href="/packages/">Packages</a></li>
 						</ul>
 					</li>
-					<li class="text-subtitle menu-item"><a href="#">Contact</a></li>
+					<li class="text-subtitle menu-item"><a href="/contact/">Contact</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -91,7 +91,7 @@ import Logo from '../components/logo.astro'
 				position: absolute;
 				background-color: var(--cream-200);
 				padding: 2rem;
-				left: -2rem;
+				left: -4rem;
 				top: 2.5rem;
 				min-width: 200px;
 			}
