--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const introtextdata = {
 		'Morbi in urna lacinia, gravida leo tincidunt, placerat velit. Suspendisse egestas fermentum finibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.'
 	],
 	button: {
-		url: '#',
+		url: '/weddings/',
 		text: 'Wedding Gallery',
 		target: '_self'
 	}
@@ -69,7 +69,7 @@ const homeconclusion = {
 			'Morbi in urna lacinia, gravida leo tincidunt, placerat velit. Suspendisse egestas fermentum finibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam rutrum magna tortor, vel fermentum ipsum convallis a. Nullam sollicitudin nibh quis metus viverra tempor. Ut quis imperdiet purus, non interdum ante. '
 		],
 		button: {
-			url: '#',
+			url: '/contact/',
 			text: 'Contact Me',
 			target: '_self'
 		}
