--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -60,7 +60,7 @@ const aboutconclusion = {
 			'Morbi in urna lacinia, gravida leo tincidunt, placerat velit. Suspendisse egestas fermentum finibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam rutrum magna tortor, vel fermentum ipsum convallis a. Nullam sollicitudin nibh quis metus viverra tempor. Ut quis imperdiet purus, non interdum ante. '
 		],
 		button: {
-			url: '#',
+			url: '/contact/',
 			text: 'Contact Me',
 			target: '_self'
 		}
