--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,18 +1,16 @@
 ---
 import '../styles/main.scss'
 import Header from '../components/header.astro'
-// import Footer from '../components/footer.astro'
-// import { ViewTransitions } from 'astro:transitions'
 const { title, description, page, classArray } = Astro.props
 
-const outputSitename = 'Website Name'
+const outputSitename = 'Claire Juliet Paton'
 
-let outputTitle = 'Website SEO Title'
+let outputTitle = 'Claire Juliet Paton | Frontend Website Preview'
 if (title) {
 	outputTitle = title
 }
 
-let outputDescription = 'Websites SEO Meta Description'
+let outputDescription = 'HTML / CSS / JS built with Astro.'
 if (description) {
 	outputDescription = description
 }
