--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,41 +14,6 @@ const herotextdata = {
 	]
 }
 
-const maingallery = [
-	[
-		{ aspect: 'landscape' },
-		{ aspect: 'portrait' },
-		{ aspect: 'landscape' },
-		{ aspect: 'landscape' },
-		{ aspect: 'portrait' },
-		{ aspect: 'landscape' }
-	],
-	[
-		{ aspect: 'portrait' },
-		{ aspect: 'landscape' },
-		{ aspect: 'landscape' },
-		{ aspect: 'portrait' },
-		{ aspect: 'landscape' },
-		{ aspect: 'landscape' }
-	],
-	[
-		{ aspect: 'landscape' },
-		{ aspect: 'landscape' },
-		{ aspect: 'portrait' },
-		{ aspect: 'landscape' },
-		{ aspect: 'landscape' },
-		{ aspect: 'portrait' }
-	],
-	[
-		{ aspect: 'landscape' },
-		{ aspect: 'portrait' },
-		{ aspect: 'landscape' },
-		{ aspect: 'landscape' },
-		{ aspect: 'portrait' },
-		{ aspect: 'landscape' }
-	]
-]
-
 const weddingconclusion = {
 	background: {
 		trans: 'clear',
@@ -62,7 +27,7 @@ const weddingconclusion = {
 			'Morbi in urna lacinia, gravida leo tincidunt, placerat velit. Suspendisse egestas fermentum finibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam rutrum magna tortor, vel fermentum ipsum convallis a. Nullam sollicitudin nibh quis metus viverra tempor. Ut quis imperdiet purus, non interdum ante. '
 		],
 		button: {
-			url: '#',
+			url: '/contact/',
 			text: 'Contact Me',
 			target: '_self'
 		}
